--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
+    <h1>Sudeep T C</h1>
     <nav>
-      <h1>Sudeep T C</h1>
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#education">Education</a></li>
@@ -21,20 +21,20 @@
     </nav>
   </header>
 
-  <section id="about">
+  <section id="About">
     <h2>About Me</h2>
-    <p>I’m a tech enthusiast, quick learner, and problem solver dedicated to continuously expanding my skills in tech. I specialize in DevOps, Full Stack Development, and AI/ML applications.</p>
+    <p>I am a tech enthusiast with a passion for DevOps, AI/ML, and full-stack development. I'm a fast learner and a strong problem-solver, always eager to build and innovate in real-world projects.</p>
   </section>
 
-  <section id="education">
+  <section id="Education">
     <h2>Education</h2>
     <ul>
-      <li><strong>Acharya Institute of Technology</strong>, Bengaluru (2021–2025) - CGPA: 9.0</li>
-      <li>JNV Mandya - 12th: 91.8%, 10th: 79.8%</li>
+      <li><strong>Acharya Institute of Technology, Bengaluru</strong> (2021–2025) – CGPA: 9.0</li>
+      <li>JNV Mandya – 12th: 91.8%, 10th: 79.8%</li>
     </ul>
   </section>
 
-  <section id="certifications">
+  <section id="Certifications">
     <h2>Certifications</h2>
     <ul>
       <li>Big Data Modelling - UC San Diego (Coursera)</li>
@@ -44,49 +44,36 @@
     </ul>
   </section>
 
-  <section id="projects">
+  <section id="Projects">
     <h2>Projects</h2>
     <ul>
-      <li>
-        <strong>Fine-Tuned BERT for Sentiment Analysis (Kannada)</strong><br/>
-        <em>Python, BERT, Flask</em><br/>
-        <a href="https://github.com/sudeeptc/Fine-Tuned-BERT-for-Sentimental-Analysis-in-Kannada">GitHub</a>
-      </li>
-      <li>
-        <strong>Word Sense Disambiguation in Kannada</strong><br/>
-        <em>Python, Scikit-learn</em><br/>
-        <a href="https://github.com/sudeeptc/Kannada-Words-Sense-Disambiguation">GitHub</a>
-      </li>
-      <li>
-        <strong>Hostel Management System</strong><br/>
-        <em>MySQL, PhpMyAdmin</em>
-      </li>
+      <li><strong>Fine-Tuned BERT for Sentiment Analysis (Kannada)</strong><br/>Tools: Python, BERT, Flask – <a href="https://github.com/sudeeptc/Fine-Tuned-BERT-for-Sentimental-Analysis-in-Kannada">GitHub</a></li>
+      <li><strong>Word Sense Disambiguation in Kannada</strong><br/>Tools: Python, Scikit-learn – <a href="https://github.com/sudeeptc/Kannada-Words-Sense-Disambiguation">GitHub</a></li>
+      <li><strong>Hostel Management System</strong><br/>Tools: MySQL, PhpMyAdmin</li>
     </ul>
   </section>
 
-  <section id="skills">
+  <section id="Skills">
     <h2>Skills</h2>
-    <h3>Technical Skills</h3>
+    <h3>Technical</h3>
     <p>C, C++, Python, Java, HTML, CSS, JS, Django, Linux, Docker, Kubernetes, Ansible</p>
     <h3>Soft Skills</h3>
     <p>Teamwork, Leadership, Time Management, Adaptability</p>
   </section>
 
-  <section id="contact">
+  <section id="Contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:sudeeptc0007@gmail.com">sudeeptc0007@gmail.com</a></p>
     <p>Phone: <a href="tel:+917411111242">+91-7411111242</a></p>
-    <p>
-      <a href="https://www.linkedin.com/in/sudeep-t-c-881718308">LinkedIn</a> |
-      <a href="https://github.com/sudeeptc">GitHub</a>
-    </p>
-    <a href="SudeepT C Resume1.pdf" download>Download Resume</a>
+    <div class="icon-links">
+      <a href="https://www.linkedin.com/in/sudeep-t-c-881718308" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/sudeeptc" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+    <a class="button" href="SudeepT C Resume1.pdf" download>Download Resume</a>
   </section>
 
   <footer>
     <p>&copy; 2025 Sudeep T C</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
