--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>I am a tech enthusiast with a passion for DevOps, AI/ML, and full-stack development. I'm a fast learner and a strong problem-solver, always eager to build and innovate in real-world projects. With a foundation in Information Science Engineering, I strive to integrate modern technologies into meaningful solutions.</p>
   </section>
 
-  <section id="education">
+  <section id="Education">
     <h2>Education</h2>
     <p>I have completed my school education at Jawahar Navodaya Vidyalaya, Mandya — a prestigious government-run residential school aimed at nurturing rural talent. I am currently pursuing my Bachelor's degree in Information Science and Engineering at Acharya Institute of Technology, Bengaluru, known for its industry-focused curriculum and vibrant student community.</p>
     <ul>
