--- a/about.html
+++ b/about.html
@@ -7,15 +7,17 @@
 </head>
 <body>
   <nav>
-    <ul>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="certifications.html">Certifications</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <img src="profile.jpg" alt="Sudeep T C" style="height: 60px; border-radius: 50%; vertical-align: middle; margin-right: 10px;">
+  <ul style="display: inline-block; list-style: none; margin: 0; padding: 0;">
+    <li style="display: inline; margin-right: 15px;"><a href="about.html">About Me</a></li>
+    <li style="display: inline; margin-right: 15px;"><a href="education.html">Education</a></li>
+    <li style="display: inline; margin-right: 15px;"><a href="certifications.html">Certifications</a></li>
+    <li style="display: inline; margin-right: 15px;"><a href="projects.html">Projects</a></li>
+    <li style="display: inline; margin-right: 15px;"><a href="skills.html">Skills</a></li>
+    <li style="display: inline;"><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
 
   <section id="about">
     <h2>About Me</h2>
