--- a/index.html
+++ b/index.html
@@ -1,96 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sudeep T C | Portfolio</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <title>Sudeep T C - Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Sudeep T C</h1>
-    <nav>
-      <ul>
-        <li><a href="#About">About</a></li>
-        <li><a href="#Education">Education</a></li>
-        <li><a href="#Certifications">Certifications</a></li>
-        <li><a href="#Projects">Projects</a></li>
-        <li><a href="#Skills">Skills</a></li>
-        <li><a href="#Contact">Contact</a></li>
-      </ul>
-    </nav>
+    <h1>Hi, I'm Sudeep T C 👋</h1>
+    <p>Welcome to my personal portfolio website</p>
   </header>
 
- <section id="About">
-    <h2>About Me</h2>
-    <p>I am a tech enthusiast with a passion for DevOps, AI/ML, and full-stack development. I'm a fast learner and a strong problem-solver, always eager to build and innovate in real-world projects. With a foundation in Information Science Engineering, I strive to integrate modern technologies into meaningful solutions.</p>
-  </section>
-
-  <section id="Education">
-    <h2>Education</h2>
-    <p>I have completed my school education at Jawahar Navodaya Vidyalaya, Mandya — a prestigious government-run residential school aimed at nurturing rural talent. I am currently pursuing my Bachelor's degree in Information Science and Engineering at Acharya Institute of Technology, Bengaluru, known for its industry-focused curriculum and vibrant student community.</p>
+  <section>
+    <h2>Navigate to sections</h2>
     <ul>
-      <li><strong>Acharya Institute of Technology, Bengaluru</strong> (2021–2025) – CGPA: 9.0</li>
-      <li><strong>Jawahar Navodaya Vidyalaya, Mandya</strong> – 12th: 91.8%, 10th: 79.8%</li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="certifications.html">Certifications</a></li>
+      <li><a href="education.html">Education</a></li>
+      <li><a href="skills.html">Skills</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="SudeepT C Resume1.pdf" target="_blank">Download Resume</a></li>
     </ul>
   </section>
-
-  <section id="Certifications">
-    <h2>Certifications</h2>
-    <p>To continuously sharpen my skills, I’ve completed the following certifications from globally recognized institutions and platforms:</p>
-    <ul>
-      <li>Big Data Modelling - UC San Diego (Coursera)</li>
-      <li>Selenium WebDriver with Python - Whizlabs</li>
-      <li>Database Management - Infosys Springboard</li>
-      <li>Data Science - IBM</li>
-    </ul>
-  </section>
-
-  <section id="Projects">
-    <h2>Projects</h2>
-    <p>Here are some of the key academic and personal projects I’ve worked on that demonstrate my technical capabilities and passion for innovation:</p>
-    <ul>
-      <li><strong>Fine-Tuned BERT for Sentiment Analysis (Kannada)</strong><br/>
-        <em>Abstract:</em> This project fine-tunes a pre-trained BERT model to perform sentiment analysis on product reviews written in Kannada, enabling regional businesses to understand customer opinions.<br/>
-        <em>Tools:</em> Python, BERT, Flask<br/>
-        <a href="https://github.com/sudeeptc/Fine-Tuned-BERT-for-Sentimental-Analysis-in-Kannada">View on GitHub</a>
-      </li>
-      <li><strong>Word Sense Disambiguation in Kannada</strong><br/>
-        <em>Abstract:</em> Tackles ambiguity in language processing by identifying the correct sense of a word used in context within the Kannada language.<br/>
-        <em>Tools:</em> Python, Scikit-learn<br/>
-        <a href="https://github.com/sudeeptc/Kannada-Words-Sense-Disambiguation">View on GitHub</a>
-      </li>
-      <li><strong>Hostel Management System</strong><br/>
-        <em>Abstract:</em> A web-based system to streamline the management of hostel records including student info, room allocation, and fees.<br/>
-        <em>Tools:</em> MySQL, PhpMyAdmin
-      </li>
-    </ul>
-  </section>
-
-  <section id="Skills">
-    <h2>Skills</h2>
-    <p>I bring a combination of technical skills, problem-solving abilities, and soft skills to the table:</p>
-    <h3>Technical</h3>
-    <p>C, C++, Python, Java, HTML, CSS, JS, Django, Linux, Docker, Kubernetes, Ansible</p>
-    <h3>Soft Skills</h3>
-    <p>Teamwork, Leadership, Time Management, Adaptability</p>
-  </section>
-
-  <section id="Contact">
-    <h2>Contact</h2>
-    <p>Feel free to connect with me or drop a message using the following channels:</p>
-    <p>Email: <a href="mailto:sudeeptc0007@gmail.com">sudeeptc0007@gmail.com</a></p>
-    <p>Phone: <a href="tel:+917411111242">+91-7411111242</a></p>
-    <div class="icon-links">
-      <a href="https://www.linkedin.com/in/sudeep-t-c-881718308" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/sudeeptc" target="_blank"><i class="fab fa-github"></i></a>
-    </div>
-    <a class="button" href="SudeepT C Resume1.pdf" download>Download Resume</a>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Sudeep T C</p>
-  </footer>
-  <script src="script.js"></script>
 </body>
 </html>
