--- a/index.html
+++ b/index.html
@@ -6,22 +6,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Hi, I'm Sudeep T C 👋</h1>
-    <p>Welcome to my personal portfolio website</p>
-  </header>
-
-  <section>
-    <h2>Navigate to sections</h2>
+  <h1>Welcome to My Portfolio</h1>
+  <nav>
     <ul>
-      <li><a href="about.html">About Me</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="certifications.html">Certifications</a></li>
       <li><a href="education.html">Education</a></li>
       <li><a href="skills.html">Skills</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="SudeepT C Resume1.pdf" target="_blank">Download Resume</a></li>
+      <li><a href="SudeepT C Resume1.pdf" target="_blank">Resume</a></li>
     </ul>
-  </section>
+  </nav>
 </body>
 </html>
