--- a/education.html
+++ b/education.html
@@ -21,6 +21,7 @@
 
   <section id="education">
     <h2>Education</h2>
+    <div class="education-entry">
     <p>
       I have completed my school education at Jawahar Navodaya Vidyalaya, Mandya — a prestigious government-run residential school aimed at nurturing rural talent. I am currently pursuing my Bachelor's degree in Information Science and Engineering at Acharya Institute of Technology, Bengaluru, known for its industry-focused curriculum and vibrant student community.
     </p>
@@ -28,6 +29,7 @@
       <li><strong>Acharya Institute of Technology, Bengaluru</strong> (2021–2025) – CGPA: 9.0</li>
       <li><strong>Jawahar Navodaya Vidyalaya, Mandya</strong> – 12th: 91.8%, 10th: 79.8%</li>
     </ul>
+    </div>
   </section>
 </body>
 </html>
