--- a/index.html
+++ b/index.html
@@ -2,21 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sudeep T C - Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to My Portfolio</h1>
-  <nav>
-    <ul>
-      <li><a href="about.html">About</a></li>
-      <li><a href="certifications.html">Certifications</a></li>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="SudeepT C Resume1.pdf" target="_blank">Resume</a></li>
-    </ul>
-  </nav>
+  <header class="hero">
+    <nav class="navbar">
+      <div class="logo">Sudeep</div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="certifications.html">Certifications</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="hero-content">
+      <img src="your-photo.jpg" alt="Profile Picture" class="profile-pic">
+      <h1>Hi, I'm Sudeep T C</h1>
+      <p>I'm a DevOps Engineer | Python Developer | RHCSA Certified</p>
+    </div>
+  </header>
 </body>
 </html>
