--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </ul>
     </nav>
     <div class="hero-content">
-      <img src="your-photo.jpg" alt="Profile Picture" class="profile-pic">
+      <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
       <h1>Hi, I'm Sudeep T C</h1>
       <p>I'm a DevOps Engineer | Python Developer | RHCSA Certified</p>
     </div>
