--- a/about.html
+++ b/about.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About Me - Sudeep T C</title>
+  <meta charset="UTF-8">
+  <title>About - Sudeep T C</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <nav>
-  <img src="profile.jpg" alt="Sudeep T C" style="height: 60px; border-radius: 50%; vertical-align: middle; margin-right: 10px;">
-  <ul style="display: inline-block; list-style: none; margin: 0; padding: 0;">
-    <li style="display: inline; margin-right: 15px;"><a href="about.html">About Me</a></li>
-    <li style="display: inline; margin-right: 15px;"><a href="education.html">Education</a></li>
-    <li style="display: inline; margin-right: 15px;"><a href="certifications.html">Certifications</a></li>
-    <li style="display: inline; margin-right: 15px;"><a href="projects.html">Projects</a></li>
-    <li style="display: inline; margin-right: 15px;"><a href="skills.html">Skills</a></li>
-    <li style="display: inline;"><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+<body class="page">
+  <nav class="navbar">
+    <div class="logo">Sudeep</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="certifications.html">Certifications</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="skills.html">Skills</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-
-  <section id="about">
-    <h2>About Me</h2>
+  <div class="page-content">
+    <h1>About Me</h1>
     <p>
       I am a tech enthusiast with a passion for DevOps, AI/ML, and full-stack development. I'm a fast learner and a strong problem-solver, always eager to build and innovate in real-world projects. With a foundation in Information Science Engineering, I strive to integrate modern technologies into meaningful solutions.
     </p>
