--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
     <p>
       I am a tech enthusiast with a passion for DevOps, AI/ML, and full-stack development. I'm a fast learner and a strong problem-solver, always eager to build and innovate in real-world projects. With a foundation in Information Science Engineering, I strive to integrate modern technologies into meaningful solutions.
     </p>
+  </div>
   </section>
 </body>
 </html>
