--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     </ul>
   </nav>
 
-  <div class="page-content">
+  <div class="container">
     <h1>About Me</h1>
     <p>
       I am a tech enthusiast with a passion for DevOps, AI/ML, and full-stack development. I'm a fast learner and a strong problem-solver, always eager to build and innovate in real-world projects. With a foundation in Information Science Engineering, I strive to integrate modern technologies into meaningful solutions.
