--- a/certifications.html
+++ b/certifications.html
@@ -20,6 +20,7 @@
 
 
   <section id="certifications">
+    <div class="container">
     <h2>Certifications</h2>
     <p>
       To continuously sharpen my skills, I’ve completed the following certifications from globally recognized institutions and platforms:
@@ -30,6 +31,7 @@
       <li>Database Management - Infosys Springboard</li>
       <li>Data Science - IBM</li>
     </ul>
+    </div>
   </section>
 </body>
 </html>
