--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 </nav>
 
 
-  <section id="contact">
+  <div class="container">
     <h2>Contact</h2>
     <p>Feel free to connect with me or drop a message using the following channels:</p>
     <p>Email: <a href="mailto:sudeeptc0007@gmail.com">sudeeptc0007@gmail.com</a></p>
@@ -34,6 +34,6 @@
       </a>
     </div>
     <a class="button" href="SudeepT C Resume1.pdf" download>Download Resume</a>
-  </section>
+  </div>
 </body>
 </html>
