--- a/skills.html
+++ b/skills.html
@@ -19,13 +19,13 @@
 </nav>
 
 
-  <section id="skills">
+ <div class="container">
     <h2>Skills</h2>
     <p>I bring a combination of technical skills, problem-solving abilities, and soft skills to the table:</p>
     <h3>Technical</h3>
     <p>C, C++, Python, Java, HTML, CSS, JS, Django, Linux, Docker, Kubernetes, Ansible</p>
     <h3>Soft Skills</h3>
     <p>Teamwork, Leadership, Time Management, Adaptability</p>
-  </section>
+ </div>
 </body>
 </html>
