--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 </nav>
 
 
-  <section id="projects">
+  <div class="container">
     <h2>Projects</h2>
     <p>
       Here are some of the key academic and personal projects I’ve worked on that demonstrate my technical capabilities and passion for innovation:
@@ -43,6 +43,6 @@
         <em>Tools:</em> MySQL, PhpMyAdmin
       </li>
     </ul>
-  </section>
+  </div>
 </body>
 </html>
