--- a/education.html
+++ b/education.html
@@ -19,9 +19,9 @@
   </nav>
 
 
-  <section id="education">
+ <div class="container">
     <h2>Education</h2>
-    <div class="education-entry">
+    
     <p>
       I have completed my school education at Jawahar Navodaya Vidyalaya, Mandya — a prestigious government-run residential school aimed at nurturing rural talent. I am currently pursuing my Bachelor's degree in Information Science and Engineering at Acharya Institute of Technology, Bengaluru, known for its industry-focused curriculum and vibrant student community.
     </p>
